--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
- body {
+body {
      background-color: #cbf1f5;
  }
-
+h1 {
+    color: #66bfbf;
+}
+h3{
+    color: #350b40;
+}
  hr {
      border-style: dotted none none;
      border-color: #71c9ce;
