--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,22 @@
 body {
-     background-color: #cbf1f5;
- }
+    background-color: #cbf1f5;
+}
+
 h1 {
     color: #66bfbf;
 }
-h3{
+
+h3 {
     color: #350b40;
 }
- hr {
-     border-style: dotted none none;
-     border-color: #71c9ce;
-     border-width: 5px;
-     width: 5%;
- }
+
+hr {
+    border-style: dotted none none;
+    border-color: #71c9ce;
+    border-width: 5px;
+    width: 5%;
+}
+
+.hover:hover {
+    color: #f76b8a;
+}
